--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
         <cucumber.version>6.11.0</cucumber.version>
         <junit.version>4.13.2</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+             
+  <sonar.organization>gherkin-by-example</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
