URI to BeeCrowd

--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>br.masmangan.uri.uri1001</groupId>
-	<artifactId>cucumber</artifactId>
+	<groupId>br.masmangan</groupId>
+	<artifactId>beecrowd</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
