--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<junit.version>4.13.2</junit.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-		<sonar.organization>gherkin-by-example</sonar.organization>
+		<sonar.organization>puc-rs</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
